syntax = "proto3";

package java.util.concurrent.atomic;

import "org.wildfly.clustering.marshalling.protostream.proto";

// IDs: 80 - 89

/**
 * @TypeId(80)
 */
message AtomicBoolean {
	bool	value	= 1;
}

/**
 * @TypeId(81)
 */
message AtomicInteger {
	sint32	value	= 1;
}

/**
 * @TypeId(82)
 */
message AtomicLong {
	sint64	value	= 1;
}

/**
 * @TypeId(83)
 */
message AtomicReference {
	org.wildfly.clustering.marshalling.protostream.Any	value	= 1;
}
